--- a/index.html
+++ b/index.html
@@ -74,5 +74,37 @@
 
 			</section><!--MOSAICO-->
 		</section><!--MOSAICO-->
+
+		<section class="servicos">
+			<div class="center">
+				<section class="box-servico">
+					<h2>Lorem ipsum</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<img src="imagens/icone_dente.png" alt="">
+				</section><!--BOX-SERVICO-->
+				<section class="box-servico">
+					<h2>Lorem ipsum</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</section><!--BOX-SERVICO-->
+				<section class="box-servico">
+					<h2>Lorem ipsum</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<img src="imagens/icone_dente.png" alt="">
+				</section><!--BOX-SERVICO-->
+			</div><!--CENTER-->
+		</section><!--SERVICOS-->
+
+		<section class="perfil">
+			<section class="center">
+				<div class="foto-perfil">
+				<img src="imagens/img_perfil.png" alt="">
+				</div>
+				<aside>
+					<h2>Dra. Fernanda</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quam, aliquid odit earum laboriosam temporibus, accusamus adipisci ducimus rerum iure fugit est vitae dolor quisquam. Tempora veritatis repellat odit officia?</p>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolores nemo nisi beatae, necessitatibus cum rerum! Molestias, deleniti voluptatibus dignissimos, nemo quam eum corporis nulla dolor nostrum et aliquid aperiam.</p>
+				</aside><!-- TEXTO PERFIL-->
+			</section><!--CENTER-->
+		</section><!--PERFIL-->
 </body>
 </html>
