--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="logo">
 				<img src="imagens/logo.png" alt="">
 			</div>
-			<nav>
+			<nav class="menu-desktop">
 				<ul>
 					<li><a href="">QUEM SOU</a></li>
 					<li><a href="">TRATAMENTOS</a></li>
@@ -23,6 +23,17 @@
 					<li><a href="">CONTATOS</a></li>
 				</ul>
 			</nav> 
+			<!-- ***********************************MENU MOBILE******************************-->
+			<nav class="menu-mobile">
+				<ul>
+					<li><a href="">QUEM SOU</a></li>
+					<li><a href="">TRATAMENTOS</a></li>
+					<li><a href="">DEPOIMENTOS</a></li>
+					<li><a href="">CONTATOS</a></li>
+				</ul>
+			</nav>
+			<!-- ***********************************MENU MOBILE******************************-->
+
 			<div class="clear"></div>
 		</section><!-- CENTER  -->
 	</header>
@@ -103,6 +114,7 @@
 					<h2>Dra. Fernanda</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quam, aliquid odit earum laboriosam temporibus, accusamus adipisci ducimus rerum iure fugit est vitae dolor quisquam. Tempora veritatis repellat odit officia?</p>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolores nemo nisi beatae, necessitatibus cum rerum! Molestias, deleniti voluptatibus dignissimos, nemo quam eum corporis nulla dolor nostrum et aliquid aperiam.</p>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam omnis nemo totam sit enim iusto provident quas nisi sunt optio explicabo nostrum, dolorem doloribus rerum laborum. Maiores suscipit cumque eum.</p>
 				</aside><!-- TEXTO PERFIL-->
 			</section><!--CENTER-->
 		</section><!--PERFIL-->
