--- a/index.html
+++ b/index.html
@@ -118,5 +118,67 @@
 				</aside><!-- TEXTO PERFIL-->
 			</section><!--CENTER-->
 		</section><!--PERFIL-->
+
+		<section class="videos">
+			<section class="center">
+				<div class="box-video">
+					<iframe src="https://www.youtube.com/embed/d_9yHWoB4_w" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div><!-- BOX-VIDEO -->
+				<div class="box-video"><iframe src="https://www.youtube.com/embed/j6paVHwot0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><!-- BOX-VIDEO -->
+				<div class="box-video"><iframe src="https://www.youtube.com/embed/5gfJbejIIHs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><!-- BOX-VIDEO -->
+				<div class="clear"></div>
+			</section><!-- CENTER -->
+		</section><!-- VIDEOS -->
+
+		<section class="tratamentos">
+			<h2>Tratamentos</h2>
+		<section class="center">
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+			</div><!--tratamento-container-->
+
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+			</div><!--tratamento-container-->
+
+			<div class="tratamento-container">
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+				<div class="tratamento-single">
+					<H2>lorem ipsum</H2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident corrupti illum autem optio doloremque necessitatibus non similique officiis assumenda hic dolores cupiditate, natus unde, aliquid asperiores, pariatur ad eum omnis.</p>
+				</div><!--TRATAMENTO SINGLE-->
+			</div><!--tratamento-container-->
+			<div class="clear"></div>
+		</section><!--CENTER-->
+		</section><!--TRATAMENTOS-->
 </body>
 </html>
