--- a/index.html
+++ b/index.html
@@ -120,14 +120,25 @@
 		</section><!--PERFIL-->
 
 		<section class="videos">
+
 			<section class="center">
+
 				<div class="box-video">
 					<iframe src="https://www.youtube.com/embed/d_9yHWoB4_w" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div><!-- BOX-VIDEO -->
-				<div class="box-video"><iframe src="https://www.youtube.com/embed/j6paVHwot0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><!-- BOX-VIDEO -->
-				<div class="box-video"><iframe src="https://www.youtube.com/embed/5gfJbejIIHs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><!-- BOX-VIDEO -->
+
+				<div class="box-video">
+					<iframe src="https://www.youtube.com/embed/j6paVHwot0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div><!-- BOX-VIDEO -->
+
+				<div class="box-video">
+					<iframe src="https://www.youtube.com/embed/5gfJbejIIHs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div><!-- BOX-VIDEO -->
+
 				<div class="clear"></div>
+
 			</section><!-- CENTER -->
+
 		</section><!-- VIDEOS -->
 
 		<section class="tratamentos">
@@ -180,5 +191,66 @@
 			<div class="clear"></div>
 		</section><!--CENTER-->
 		</section><!--TRATAMENTOS-->
+
+		<section class="depoimentos">
+			<h2>Depoimentos</h2>
+			<section class="center">
+				<div class="depoimento-single">
+					<quote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae fuga ullam laboriosam assumenda voluptatum vel eaque quidem voluptatem velit aliquid, sunt nobis cupiditate earum excepturi, facere omnis eius optio. Eaque."</quote>
+					<div class="nome-depoimento">
+						<img src="imagens/depoimento1.png" alt="">
+						<span>Maria Augusta Oliveira</span>
+					</div>				
+			</section>
+		</section><!--DEPOIMENTOS-->
+
+		<section class="instagram">
+			<section class="center">
+				<div class="inst">
+					<img src="imagens/inst.png" alt="">
+					<p>Acesse o instagram para ver mais fotos</p>
+					<p>@algum instagram aqui</p>
+				</div>
+			<div class="fotos-instagram">
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="fotinhas">
+						<div class="fotinhas-single"></div>
+					</div><!--FOTINHAS-->
+					<div class="clear"></div>
+				</div><!--FOTOS INSTAGRAM-->
+			<div class="facebook">
+				<img src="imagens/fb.png" alt="">
+				<p>Acesse o Fabook para segui minha página</p>
+				<p>link do facebook</p>
+			</div>
+			</section><!--CENTER-->
+		</section><!--INSTAGRAM-->
+		
+		<section class="formulario">
+			
+		</section>
 </body>
 </html>
