--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<div class="clear"></div>
 				</div><!--FOTOS INSTAGRAM-->
 			<div class="facebook">
-				<img src="imagens/fb.png" alt="">
+				<a href="https://www.facebook.com/guilhermepadovani.silveira/" target="_blank"><img src="imagens/fb.png" alt=""></a>
 				<p>Acesse o Fabook para segui minha página</p>
 				<p>link do facebook</p>
 			</div>
@@ -250,7 +250,25 @@
 		</section><!--INSTAGRAM-->
 		
 		<section class="formulario">
-			
+			<h2>CONTATO</h2>
+				<form action="">
+					<div class="form-wraper w100">
+						<span>Nome:</span>
+						<input type="text" name="nome" placeholder="Seu nome aqui" />
+					</div><!-- form-wraper w100 -->
+					<div class="form-wraper w50">
+						<span>E-mail:</span>
+						<input type="email" name="email" placeholder="e-mail que mais usa" />
+					</div><!-- form-wraper w50 -->
+					<div class="form-wraper w50">
+						<span>Telefone</span>
+						<input type="tel" name="tel" placeholder="(ddd)+numero"/>
+					</div><!-- form-wraper w50 -->
+					<div class="form-wraper w100">
+						<span>Mensagem</span>
+						<textarea name="" id="" cols="30" rows="10"></textarea>
+					</div><!-- form-wraper w100 -->
+				</form>
 		</section>
 </body>
 </html>
