--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			</div>
 			<nav class="menu-desktop">
 				<ul>
-					<li><a href="">QUEM SOU</a></li>
-					<li><a href="">TRATAMENTOS</a></li>
-					<li><a href="">DEPOIMENTOS</a></li>
-					<li><a href="">CONTATOS</a></li>
+					<li><a href="#quemsou">QUEM SOU</a></li>
+					<li><a href="#tratamentos">TRATAMENTOS</a></li>
+					<li><a href="#depoimentos">DEPOIMENTOS</a></li>
+					<li><a href="#contato">CONTATOS</a></li>
 				</ul>
 			</nav> 
 			<!-- ***********************************MENU MOBILE******************************-->
@@ -105,7 +105,7 @@
 			</div><!--CENTER-->
 		</section><!--SERVICOS-->
 
-		<section class="perfil">
+		<section class="perfil" id="quemsou">
 			<section class="center">
 				<div class="foto-perfil">
 				<img src="imagens/img_perfil.png" alt="">
@@ -141,7 +141,7 @@
 
 		</section><!-- VIDEOS -->
 
-		<section class="tratamentos">
+		<section class="tratamentos" id="tratamentos">
 			<h2>Tratamentos</h2>
 		<section class="center">
 			<div class="tratamento-container">
@@ -192,7 +192,7 @@
 		</section><!--CENTER-->
 		</section><!--TRATAMENTOS-->
 
-		<section class="depoimentos">
+		<section class="depoimentos" id="depoimentos">
 			<h2>Depoimentos</h2>
 			<section class="center">
 				<div class="depoimento-single">
@@ -249,7 +249,7 @@
 			</section><!--CENTER-->
 		</section><!--INSTAGRAM-->
 		
-		<section class="formulario">
+		<section class="formulario" id="contato">
 			<h2>CONTATO</h2>
 				<form action="">
 					<div class="form-wraper w100">
@@ -268,7 +268,37 @@
 						<span>Mensagem</span>
 						<textarea name="" id="" cols="30" rows="10"></textarea>
 					</div><!-- form-wraper w100 -->
+					<div class="form-wraper w100" style="text-align: center;">
+						<input type="submit" name="acao" value="Enviar" >
+					<div class="clear"></div>
 				</form>
-		</section>
+		</section><!--FORMULARIO-->
+
+		<section class="rodape">
+			<section class="center">
+					<div class="box">
+						<h2>Telefone</h2>
+						<p>Consultas: +55 19 97135-7855</p>
+						<p>Whatsapp: +55 19 97135-7855</p>
+					</div>
+					<div class="box">
+						<h2>Horarios</h2>
+						<p>Segunda a Sexta.</p>
+						<p>08:00 - 18:00</p>
+					</div>
+					<div class="box">
+						<h2>Endereço</h2>
+						<p>Rua Fernão Pompeo de Camargo 2093</p>
+						<p>Jd do Trevo - Campinas/SP</p>
+					</div>
+					<div class="clear"></div>
+			</section>
+		</section><!-- RODAPE -->
+
+		<footer>
+			<section class="center">
+				<p>GUILHERME SILVEIRA</p>
+			</section>
+		</footer>
 </body>
 </html>
